Improve MovieCard icons: Add smooth transition for favorite star and folding animation for watchlist icon

--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "test": "jest"
   },
   "jest": {
-  "transform": {
-    "^.+\\.[t|j]sx?$": "babel-jest"
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
+  },
+  "dependencies": {
+    "classnames": "^2.5.1"
   }
-}
 }
