test vercel deploy remove api/

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/index.js",
+        "src": "movie-database-backend/index.js",
         "use": "@vercel/node"
       },
       {
@@ -13,7 +13,7 @@
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "/api/index.js"
+        "dest": "/movie-database-backend/index.js"
       },
       {
         "src": "/(.*)",
