--- a/movie-database-backend/.gitignore
+++ b/movie-database-backend/.gitignore
@@ -11,11 +11,11 @@
 
    # Misc
    .DS_Store
-   .env
-   .env.local
-   .env.development.local
-   .env.test.local
-   .env.production.local
+   movie-database-backend/.env
+   movie-database-backend/.env.local
+   movie-database-backend/.env.development.local
+   movie-database-backend/.env.test.local
+   movie-database-backend/.env.production.local
 
    npm-debug.log*
    yarn-debug.log*
